2007-3-10  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/npsyn_c.c
	  interface/rtsyn.h
	  interface/rtsyn_common.c
	  interface/rtsyn_npipe.c
	  timidity/npipe_a.c
	  timidity/playmidi.c
	  timidity/portaudio_a.c
	  timidity/timidity.c
	  utils/timer.c:          Windows Named Pipe interface.
	  
2007-02-09  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface.h.in:       Windows Named Pipe
	* timidity/timidity.c:  fix typo

2007-02-09  Keishi Suenaga <skeishi@yahoo.co.jp>

	* configure.in
	  interface/Makefile.am
	  interface/npsyn_c.c (add)
	  interface/rtsyn.h
	  interface/rtsyn_common.c
	  interface/rtsyn_npipe.c (add)
	  timidity/Makefile.am
	  timidity/npipe_a.c (add)
	  timidity/output.c
	  timidity/timidity.c       
	  timidity/controls.c:      Windows Named Pipe Interface(new)
	* timidity/resample.c       small fix frreing gauss_table.
	* windrv/timiditydrv.c
	* windrv/timiwp_timidity.c: fix for WindowsMediaPlayer.

2007-01-28  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/rtsyn_common.c: fix sysex check 
	* timidity/portaudio_a.c    small fix for compiling
	* timidity/timidity.c       w32 cfg file sequence changed
	                            option > exe dir > win dir
	                            w32 set stdin&out binarymode
	* timidity/w32_a.c          small fix for compiling
	* windrv/Makefile.am        re-add add timidity.idl
	* windrv/timiditydrv.c      re-add MIDIOUTCAPS2A(W)
	* windrv/timiditydrv.idl    re-add

2007-01-14  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/flac_a.c
      timidity/gogo_a.c
      timidity/speex_a.c
      timidity/vorbis_a.c
      timidity/wave_a.c
      timidity/output_a.c: fix for autofilename

2007-01-13  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for server interface.

2007-01-12  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for autofilname.

2007-01-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (main): Fix to avoid segmentation fault