@@ -1,3 +1,6 @@
+2008-3-28  Stags Sergeev <stsp@aknet.ru>
+	* timidity/midi_a.c	 remove gnuc extensions
+
 2007-3-10  Keishi Suenaga <skeishi@yahoo.co.jp>
 
 	* interface/npsyn_c.c
